--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,33 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <link href='https://fonts.googleapis.com/css?family=Paytone+One' rel='stylesheet' type='text/css'>
 </head>
 <body>
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+	<div class="container">
+		<a class="navbar-brand" href="#">Bankly</a>
+		<ul class="nav navbar-nav navbar-left">
+			<li class="active">
+				<a href="#">Home</a>
+			</li>
+		</ul>
+		<ul class="nav navbar-nav navbar-right log">
+			<li class="active">
+				<% if @user %>
+				<li>Logged in as <%= @user.name %></li>
+				<% end %>
+			</li>
+		</ul>
+	</div>
+</nav>
 
-<%= render "layouts/flash" %>
 
+<div class='container main'>
+	<%= render "layouts/flash" %>
+	<div class='row text-center'>
 <%= yield %>
-
+	</div>
+</div>
 </body>
 </html>
