--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,5 +1,19 @@
-<%= link_to "Sign up", users_path %>
-<%= link_to "Login", login_path %>
-<%= link_to "Logout", logout_path %>
-<%= link_to "Add Item", line_items_path %>
-<p>Logged in as <%= @user.name %></p>
+<div class = 'container'>
+	<div class = 'row center'>
+		<div class = 'col-sm-8 col-sm-offset-2'>
+			<div class = 'top text-center'>
+				<h1 class='title'><span class='title'>BANKLY</span></h1>
+				<h2><span class='slogan'>Visualize Your Spending</span></h2>
+				<a href='/login' class='btn-xlarge btn-primary'>Log in</a>
+				<p>Not a user? <%= link_to "Sign up", users_path %></p>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<!-- <svg width="720" height="120">
+  <circle cx="40" cy="60" r="10"></circle>
+  <circle cx="80" cy="60" r="10"></circle>
+  <circle cx="120" cy="60" r="10"></circle>
+</svg> -->
