changed login page logo image

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -3,6 +3,23 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+	.circle-stat{
+		left: 284px;
+	}
+
+	.main-logo{
+		width: 400px;
+		height: 225px;
+		display: block;
+		margin: 0 auto;
+		margin-top: 100px;
+		margin-bottom: -40px;
+	}
+
+	.nav-logo{
+		width: 100px;
+		height: 40px;
+	}
 
 	.main {
 		.btn-xlarge {
