--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/" id="bankly">Bankly</a>
+      <a class="navbar-brand" href="/" id="bankly"><img src='assets/green_bankly.jpg' class='nav-logo'></a>
     <% end %>
     </div>
 
@@ -45,7 +45,7 @@
 		<%= yield %>
 	</div>
 
- <div class="modal fade" id="modal-id3">
+ <div class="modal fade" id="modal-add">
     <div class="modal-dialog">
       <div class="modal-content modal-padding">
         <div class="modal-header">
